--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             localStorage.setItem('branchName', user.branch);
 
             // Redirect to collection page
-            window.location.href = 'Collection.html';
+            window.location.href = 'collection.html';
         } catch (error) {
             console.error("Failed to save branch info in localStorage:", error);
             alert("An error occurred while logging in. Please try again.");
