--- a/chart.html
+++ b/chart.html
@@ -22,7 +22,7 @@
     </header>
 
     <h2 class="title">
-        <img src="Chart.png" alt="Pencil Icon" class="title-icon"> Collection Chart
+        <img src="chart.png" alt="Pencil Icon" class="title-icon"> Collection Chart
     </h2>
 
     <div class="filter-container">
