--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="user.png" alt="logo" class= "logo"> 
             <h4>Wellcome to Chengannur Chits</h4>       
         <form>                    
-            <input type="text" placeholder="User Name" id="username" name="username" required> 
+            <input type="text" placeholder="Username" id="username" name="username" required> 
             <input type="password" placeholder="Password" id="password" name="password" required>
             <input type="submit" value="Login">
             
@@ -29,6 +29,7 @@
         { username: 'admin', password:'admin',branch: 'admin'},
         { username: 'anil', password:'anil123',branch: 'anil'},
         { username: 'sajan', password:'saj@2024',branch: 'sajan'},
+        { username: 'rajan', password:'rajan123',branch: 'sajan'},
        
     ];
 
