--- a/report.html
+++ b/report.html
@@ -109,7 +109,7 @@
                 <tr>
                     <th style="width: 9%; text-align: center;">Branch</th>
                     <th style="width: 8%; text-align: center;">Deposit Date</th>
-                    <th style="width: 175px; text-align: center;">Staff Name</th>
+                    <th style="width: 175px; text-align: center;">Deposit By</th>
                     <th style="width: 8%; text-align: center;">Receipt Date</th>
                     <th style="width: 19%; text-align: center;">Customer Name</th>
                     <th style="width: 7%; text-align: center;">Chitty Number</th>
