--- a/report.html
+++ b/report.html
@@ -36,63 +36,70 @@
         <label for="searchBox">Branch</label>
         <select class="branchName" name="branchName" id="hiddenBranchName">
             <option>      </option>  
-            <option>anchal</option>            
-            <option>budhanoor</option>
-            <option>chengannur</option>
-            <option>cheriyanad</option>
-            <option>chettikulangara</option>
-            <option>chunakkara</option>
-            <option>chungapara</option>
-            <option>edappon</option>
-            <option>edathitta</option>
-            <option>elavumthitta</option>
-            <option>ennakkad</option>
-            <option>erumeli</option>
-            <option>kadapra</option>
-            <option>kakanad</option>
-            <option>kallumood</option>
-            <option>kangazha</option>
-            <option>karakkad</option>
-            <option>karunagappally</option>
-            <option>kodumon</option>
-            <option>kollakadavu</option>
-            <option>konnimarket</option>
-            <option>koodal</option>
-            <option>kotta</option>
-            <option>kottukadu</option>
-            <option>kulanada</option>
-            <option>kulikampalam</option>
-            <option>kunnamthanam</option>
-            <option>kunnikkuzhy</option>
-            <option>kurichy</option>
-            <option>mannar</option>
-            <option>mararithottam</option>
-            <option>nariyapuram</option>
-            <option>neduvathoor</option>
-            <option>omalloor</option>
-            <option>padanilam</option>
-            <option>pallickal</option>
-            <option>pallippad</option>
-            <option>pandalam</option>
-            <option>pandanad</option>
-            <option>pannikkarukadavu</option>
-            <option>parumala</option>
-            <option>pazhakulam</option>
-            <option>perumpetty</option>
-            <option>punthala</option>
-            <option>puramattom</option>
-            <option>puthenchanda</option>
-            <option>sooranad</option>
-            <option>tbroad</option>
-            <option>thattarambalam</option>
-            <option>thevalakara</option>
-            <option>thiruvalla</option>
-            <option>thrikkunnapuzha</option>
-            <option>ullanadu</option>
-            <option>vallakali</option>
-            <option>vazhuvadi</option>
-            <option>venmony</option>
-            <option>vettiyar</option>
+            <option>anchal</option>
+<option>bharanikkavu</option>
+<option>budhanoor</option>
+<option>chengannur</option>
+<option>cheriyanad</option>
+<option>chettikulangara</option>
+<option>chunakkara</option>
+<option>chungapara</option>
+<option>edappon</option>
+<option>edathitta</option>
+<option>elavumthitta</option>
+<option>ennakkad</option>
+<option>erumeli</option>
+<option>kadapra</option>
+<option>kakanad</option>
+<option>kallumood</option>
+<option>kangazha</option>
+<option>karakkad</option>
+<option>karunagappally</option>
+<option>kodumon</option>
+<option>kollakadavu</option>
+<option>konnimarket</option>
+<option>koodal</option>
+<option>kotta</option>
+<option>kottukadu</option>
+<option>kulanada</option>
+<option>kulikampalam</option>
+<option>kunnamthanam</option>
+<option>kunnikkuzhy</option>
+<option>kurathikad</option>
+<option>kurichy</option>
+<option>kuttippuram</option>
+<option>mannar</option>
+<option>mararithottam</option>
+<option>nalumukku</option>
+<option>nariyapuram</option>
+<option>neduvathoor</option>
+<option>omalloor</option>
+<option>padanilam</option>
+<option>pallickal</option>
+<option>pallippad</option>
+<option>pandalam</option>
+<option>pandanad</option>
+<option>panmana</option>
+<option>pannikkarukadavu</option>
+<option>parumala</option>
+<option>pazhakulam</option>
+<option>perumpetty</option>
+<option>punthala</option>
+<option>puramattom</option>
+<option>puthenchanda</option>
+<option>sooranad</option>
+<option>tbroad</option>
+<option>thadathilal</option>
+<option>thattarambalam</option>
+<option>thevalakara</option>
+<option>thiruvalla</option>
+<option>thrikkunnapuzha</option>
+<option>ullanadu</option>
+<option>vallakali</option>
+<option>vazhuvadi</option>
+<option>venmony</option>
+<option>vettiyar</option>
+
         </select>      
 <!--droup list --------------------------------->
         <button class="display" onclick="filterTable()">Display</button>
